# llvm-static-example

./: CMakeLists.txt  README.md  build-locally.py
recipe/: build.sh  meta.yaml
src/: main.cpp
